design for edit profile bussiness profile and campaigns

--- a/html-design/html/edit-profile.html
+++ b/html-design/html/edit-profile.html
@@ -144,8 +144,9 @@
 								  		<div class="col-sm-6 padding-r-5">
 										  	<div class="form-group">
 											    <label for="city">Date of birth</label>
-											    <input type="text" class="form-control" id="city">
-											    <img src="images/checked.svg">
+											    <input type="number" name="day" value="1" min="1" max="31">									
+											    <input type="number" name="month" value="1" min="1" max="12">	 
+											    <input type="number" name="year" value="2000" min="1950" max="2050">	    
 										  	</div>
 										</div>
 										<div class="col-sm-6 padding-l-5">
@@ -164,7 +165,84 @@
 										  	</div>
 									  	</div>
 								    </div>
-								</div>																
+								    <div class="form-group">
+									    <label for="category">Category</label>
+									    <input type="text" class="form-control" id="category">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="location">Location</label>
+									    <input type="text" class="form-control" id="location">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="phone-number">Phone number</label>
+									    <input type="text" class="form-control" id="phone-number">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="email">Email</label>
+									    <input type="text" class="form-control" id="email">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="website">Web site</label>
+									    <input type="text" class="form-control" id="website">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="description">Profile description</label>
+									    <input type="text" class="form-control" id="description">									    
+								  	</div>
+								</div>	
+								<div class="form-subtitle">
+									Personal interests
+								</div>								
+								<div class="personal-interests-wrapper">
+									<div class="form-group">
+									    <label for="offer-tag">Offer tag</label>
+									    <input type="text" class="form-control" id="offer-tag">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="inquiry-tag">Inquiry tag</label>
+									    <input type="text" class="form-control" id="inquiry-tag">									    
+								  	</div>
+								</div>	
+								<div class="form-subtitle">
+									Social Network URL
+								</div>								
+								<div class="personal-interests-wrapper">
+									<div class="form-group">
+									    <label for="facebook">Facebook</label>
+									    <input type="text" class="form-control" id="facebook">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="instagram">Instagram</label>
+									    <input type="text" class="form-control" id="instagram">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="youtube">Youtube</label>
+									    <input type="text" class="form-control" id="youtube">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="linkedin">Linkedin</label>
+									    <input type="text" class="form-control" id="linkedin">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="twitter">Twitter</label>
+									    <input type="text" class="form-control" id="twitter">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="tumblr">Tumblr</label>
+									    <input type="text" class="form-control" id="tumblr">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="pintrest">Pintrest</label>
+									    <input type="text" class="form-control" id="pintrest">									    
+								  	</div>
+								  	<div class="form-group">
+									    <label for="google">Google+</label>
+									    <input type="text" class="form-control" id="google">									    
+								  	</div>
+								</div>	
+								<div class="form-group">
+									<button class="black_button">save</button>
+								</div>													
 							</form>
 						</div>
 					</div>					
