linked left menu for settings

--- a/html-design/html/bussiness-profile.html
+++ b/html-design/html/bussiness-profile.html
@@ -85,22 +85,22 @@
 	      						<div class="normal_title padding-15 hidden-xs">Settings</div>
 	      						<ul class="nav navbar-nav pull-right settings-menu">
 							        <li>
-							        	<a href="#" class="secondary_title">							        	
+							        	<a href="edit-profile.html" class="secondary_title active">							        	
 							        		<span>Edit profile</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="secondary_title">							        		
+							        	<a href="privacy.html" class="secondary_title">							        		
 								        	<span>Privacy</span>
 								        </a>
 								    </li>	
 							        <li>
-							        	<a href="#" class="secondary_title active">							        		
+							        	<a href="bussiness-profile.html" class="secondary_title">							        		
 							        		<span>Bussiness profile</span>
 									    </a>
 								    </li>				        
 							        <li>
-							        	<a href="#" class="secondary_title">							        		
+							        	<a href="campaigns.html" class="secondary_title">							        		
 							        		<span>Campaign</span>
 							        	</a>
 							        </li>
