--- a/html-design/html/bussiness-profile.html
+++ b/html-design/html/bussiness-profile.html
@@ -85,7 +85,7 @@
 	      						<div class="normal_title padding-15 hidden-xs">Settings</div>
 	      						<ul class="nav navbar-nav pull-right settings-menu">
 							        <li>
-							        	<a href="edit-profile.html" class="secondary_title active">							        	
+							        	<a href="edit-profile.html" class="secondary_title">							        	
 							        		<span>Edit profile</span>
 							        	</a>
 							        </li>
@@ -95,7 +95,7 @@
 								        </a>
 								    </li>	
 							        <li>
-							        	<a href="bussiness-profile.html" class="secondary_title">							        		
+							        	<a href="bussiness-profile.html" class="secondary_title active">							        		
 							        		<span>Bussiness profile</span>
 									    </a>
 								    </li>				        
