--- a/html-design/html/campaigns1.html
+++ b/html-design/html/campaigns1.html
@@ -85,7 +85,7 @@
 	      						<div class="normal_title padding-15 hidden-xs">Settings</div>
 	      						<ul class="nav navbar-nav pull-right settings-menu">
 							        <li>
-							        	<a href="edit-profile.html" class="secondary_title active">							        	
+							        	<a href="edit-profile.html" class="secondary_title">							        	
 							        		<span>Edit profile</span>
 							        	</a>
 							        </li>
@@ -100,7 +100,7 @@
 									    </a>
 								    </li>				        
 							        <li>
-							        	<a href="campaigns.html" class="secondary_title">							        		
+							        	<a href="campaigns.html" class="secondary_title active">							        		
 							        		<span>Campaign</span>
 							        	</a>
 							        </li>
