--- a/html-design/html/privacy.html
+++ b/html-design/html/privacy.html
@@ -85,12 +85,12 @@
 	      						<div class="normal_title padding-15 hidden-xs">Settings</div>
 	      						<ul class="nav navbar-nav pull-right settings-menu">
 									<li>
-							        	<a href="edit-profile.html" class="secondary_title active">							        	
+							        	<a href="edit-profile.html" class="secondary_title">							        	
 							        		<span>Edit profile</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="privacy.html" class="secondary_title">							        		
+							        	<a href="privacy.html" class="secondary_title active">							        		
 								        	<span>Privacy</span>
 								        </a>
 								    </li>	
