--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,4 +1,9 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800|Lora:400,400italic">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<link rel="stylesheet" href="/global/customerportal/css/index.css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800|Lora:400,400italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800|Lora:400,400italic" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" type="text/css">
+
+    <link rel="manifest" href="http://localhost:8080/manifest.json">
+    <link rel="shortcut icon" href="http://localhost:8080/favicon.ico">
+    <link rel="stylesheet" href="http://localhost:8080/global/picstagraph-web/css/index.css">
+    <link rel="stylesheet" href="http://localhost:8080/global/picstagraph-web/styles/custom.css">
