design for download data, bills and receipts, ads page and leftside bar filters

--- a/html-design/html/ads.html
+++ b/html-design/html/ads.html
@@ -100,12 +100,12 @@
 									    </a>
 								    </li>				        
 							        <li>
-							        	<a href="campaigns.html" class="secondary_title active">							        		
+							        	<a href="campaigns.html" class="secondary_title">							        		
 							        		<span>Campaign</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="ads.html" class="secondary_title">							        		
+							        	<a href="ads.html" class="secondary_title active">							        		
 							        		<span>Ads</span>
 							        	</a>
 							        </li>
@@ -130,7 +130,7 @@
 					</div>
 					<div class="col-sm-5 col-md-7 padding-rl-10">						
 						<div class="campaign-middle-section">
-							<div class="normal_title padding-15">Campaign title</div>
+							<div class="normal_title padding-15">Ad title</div>
 							<div class="campaign-block">
 								<div class="normal_title padding-15">Total budget</div>
 								<div class="indicators">
@@ -146,6 +146,25 @@
 								<div class="progressbar-wrapper">
 									<div class="progressbar">
 								      	<div style="width: 80%;"></div>
+								    </div>
+								    <span class="counter">0,00</span>
+								</div>
+							</div>
+							<div class="campaign-block">
+								<div class="normal_title padding-15">Daily budget</div>
+								<div class="indicators">
+									<div>
+										<span class="blue-block"></span>
+										Daily budget spent
+									</div>
+									<div>
+										<span class="grey-block"></span>
+										Remaining daily budget
+									</div>
+								</div>
+								<div class="progressbar-wrapper">
+									<div class="progressbar">
+								      	<div style="width: 10%;"></div>
 								    </div>
 								    <span class="counter">0,00</span>
 								</div>
@@ -192,17 +211,21 @@
 					</div>
 					<div class="col-sm-4 col-md-3 right_bar no-padding pull-left">
 						<div class="campaigns-right">
-							<button class="blue_button">Edit campaign</button>
-							<button class="black_button">Close campaign </button>
+							<button class="blue_button">Edit ad</button>
+							<button class="black_button">Close ad </button>
 							<div class="normal_title padding-15">Budget & Runtime</div>
 							<ul class="campaign-right-options">
 								<li>
-									<span>Total budget spent</span>
+									<span>Daily budget</span>
 									<span class="pull-right">100 E</span>
 								</li>
 								<li>
-									<span>Remaining budget</span>
+									<span>Total budget spent</span>
 									<span class="pull-right">20 E</span>
+								</li>
+								<li>
+									<span>Total expenses</span>
+									<span class="pull-right">200 E</span>
 								</li>
 								<li>
 									<span>Runtime</span>
@@ -218,11 +241,26 @@
 								<li>
 									<span>Clicks</span>
 									<span class="pull-right">100</span>
+								</li>								
+							</ul>
+							<div class="normal_title padding-15">Details on ad</div>
+							<ul class="campaign-right-options">
+								<li>
+									<span>Location</span>
+									<span class="pull-right">Example</span>
 								</li>
 								<li>
-									<span>Applications</span>
-									<span class="pull-right">0</span>
-								</li>
+									<span>Radius</span>
+									<span class="pull-right">0 Km</span>
+								</li>	
+								<li>
+									<span>Category</span>
+									<span class="pull-right">Example</span>
+								</li>		
+								<li>
+									<span>Target group</span>
+									<span class="pull-right">Example</span>
+								</li>									
 							</ul>
 							<div class="normal_title padding-15">
 								Status
