--- a/html-design/html/privacy.html
+++ b/html-design/html/privacy.html
@@ -84,7 +84,7 @@
 	      					<div class="collapse navbar-collapse no-padding" id="left_menu">
 	      						<div class="normal_title padding-15 hidden-xs">Settings</div>
 	      						<ul class="nav navbar-nav pull-right settings-menu">
-									<li>
+							        <li>
 							        	<a href="edit-profile.html" class="secondary_title">							        	
 							        		<span>Edit profile</span>
 							        	</a>
@@ -105,18 +105,23 @@
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="secondary_title">							        		
+							        	<a href="ads.html" class="secondary_title">							        		
 							        		<span>Ads</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="secondary_title">							        		
+							        	<a href="bills-receipts.html" class="secondary_title">							        		
 							        		<span>Bills and receipts</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="secondary_title">							        		
+							        	<a href="data-download.html" class="secondary_title">							        		
 							        		<span>Data Download</span>
+							        	</a>
+							        </li>
+							        <li>
+							        	<a href="#" class="secondary_title log-out">							        		
+							        		<span>Logout</span>
 							        	</a>
 							        </li>
 						      	</ul>
