--- a/html-design/html/ads1.html
+++ b/html-design/html/ads1.html
@@ -100,12 +100,12 @@
 									    </a>
 								    </li>				        
 							        <li>
-							        	<a href="campaigns.html" class="secondary_title active">							        		
+							        	<a href="campaigns.html" class="secondary_title">							        		
 							        		<span>Campaign</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="ads.html" class="secondary_title">							        		
+							        	<a href="ads.html" class="secondary_title active">							        		
 							        		<span>Ads</span>
 							        	</a>
 							        </li>
@@ -129,106 +129,170 @@
 						</div>
 					</div>
 					<div class="col-sm-5 col-md-7 padding-rl-10">						
-						<div class="campaign-middle-section">
-							<div class="normal_title padding-15">Campaign title</div>
-							<div class="campaign-block">
-								<div class="normal_title padding-15">Total budget</div>
-								<div class="indicators">
-									<div>
-										<span class="blue-block"></span>
-										Budget spent
-									</div>
-									<div>
-										<span class="grey-block"></span>
-										Remaining Budget
-									</div>
+						<div class="feed_wrapper">
+							<div class="feed_header">
+								<div class="col-sm-1 col-xs-1 no-padding profile_image">
+									<img src="images/image.jpg" alt="image" class="img-circle img-responsive" />
 								</div>
-								<div class="progressbar-wrapper">
-									<div class="progressbar">
-								      	<div style="width: 80%;"></div>
-								    </div>
-								    <span class="counter">0,00</span>
+								<div class="col-sm-9 col-xs-7 no-padding">
+									<div class="normal_title">User name</div>									
+									<div class="grey_title">Sponsored in Category</div>
+								</div>
+								<div class="col-sm-2 col-xs-2 like_wrapper">
+									<img src="images/blue_heart.svg" alt="like" class="pull-right" />
+								</div>
+							</div>	
+							<div class="feed_content">
+								<div class="feed_image">
+									<img src="images/feed-img.jpg" alt="image" class="img-responsive" />
+									<a class="more-strip">More</a>
+								</div>
+								<div class="feed_description padding-10">
+									<div class="normal_title">
+										Title
+									</div>									
+									<span class="secondary_title">
+										Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+										<a href="#" class="read-more">read more</a>
+									</span>
 								</div>
 							</div>
-							<div class="campaign-block">
-								<div class="normal_title padding-15">Performance</div>
-								<div class="indicators">
-									<div>
-										<span class="blue-block"></span>
+							<div class="feed_footer padding-15">
+								<div class="messages">
+									<span class="count">100</span>
+									<img src="images/feed_msg.svg">
+								</div>
+								<div class="likes">
+									<span class="count">100</span>
+									<img src="images/feed_like.svg">
+								</div>
+								<div class="show_more_options">	
+									<a href="#">• • •</a>														
+								</div>
+							</div>	
+							<div class="status">
+								<div class="status-wrapper">
+									<div class="title">
+										Status
+									</div>
+									<div class="subtitle">
+										<span class="green-circle"></span>
+									</div>
+								</div>
+								<div class="status-wrapper">
+									<div class="title">
 										Views
 									</div>
-									<div>
-										<span class="grey-block"></span>
+									<div class="subtitle">
+										700
+									</div>
+								</div>
+								<div class="status-wrapper">
+									<div class="title">
 										Clicks
 									</div>
-								</div>
-								<div class="progressbar-wrapper">
-									<div class="progressbar">
-								      	<div style="width: 50%;"></div>
-								    </div>
-								    <span class="counter">0,00</span>
-								</div>
-							</div>
-							<div class="campaign-block">
-								<div class="normal_title padding-15">Runtime</div>
-								<div class="indicators">
-									<div>
-										<span class="blue-block"></span>
-										Runtime passed
-									</div>
-									<div>
-										<span class="grey-block"></span>
-										Remaining runtime
+									<div class="subtitle">
+										20
 									</div>
 								</div>
-								<div class="progressbar-wrapper">
-									<div class="progressbar">
-								      	<div style="width: 20%;"></div>
-								    </div>
-								    <span class="counter">0,00</span>
+								<div class="status-wrapper">
+									<div class="title">
+										Applications
+									</div>
+									<div class="subtitle">
+										0
+									</div>
+								</div>
+								<div class="status-wrapper">
+									<button class="blue_button">statistics</button>
+								</div>
+							</div>					
+						</div>	
+						<div class="feed_wrapper">
+							<div class="feed_header">
+								<div class="col-sm-1 col-xs-1 no-padding profile_image">
+									<img src="images/image.jpg" alt="image" class="img-circle img-responsive" />
+								</div>
+								<div class="col-sm-9 col-xs-7 no-padding">
+									<div class="normal_title">User name</div>									
+									<div class="grey_title">Sponsored in Category</div>
+								</div>
+								<div class="col-sm-2 col-xs-2 like_wrapper">
+									<img src="images/blue_heart.svg" alt="like" class="pull-right" />
+								</div>
+							</div>	
+							<div class="feed_content">
+								<div class="feed_image">
+									<img src="images/feed-img.jpg" alt="image" class="img-responsive" />
+									<span class="more-strip">More</span>
+								</div>
+								<div class="feed_description padding-10">
+									<div class="normal_title">
+										Title
+									</div>									
+									<span class="secondary_title">
+										Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+										<a href="#" class="read-more">read more</a>
+									</span>
 								</div>
 							</div>
+							<div class="feed_footer padding-15">
+								<div class="messages">
+									<span class="count">100</span>
+									<img src="images/feed_msg.svg">
+								</div>
+								<div class="likes">
+									<span class="count">100</span>
+									<img src="images/feed_like.svg">
+								</div>
+								<div class="show_more_options">	
+									<a href="#">• • •</a>														
+								</div>
+							</div>	
+							<div class="status">
+								<div class="status-wrapper">
+									<div class="title">
+										Status
+									</div>
+									<div class="subtitle">
+										<span class="green-circle"></span>
+									</div>
+								</div>
+								<div class="status-wrapper">
+									<div class="title">
+										Views
+									</div>
+									<div class="subtitle">
+										700
+									</div>
+								</div>
+								<div class="status-wrapper">
+									<div class="title">
+										Clicks
+									</div>
+									<div class="subtitle">
+										20
+									</div>
+								</div>
+								<div class="status-wrapper">
+									<div class="title">
+										Applications
+									</div>
+									<div class="subtitle">
+										0
+									</div>
+								</div>
+								<div class="status-wrapper">
+									<button class="blue_button">statistics</button>
+								</div>
+							</div>					
 						</div>					
 					</div>
 					<div class="col-sm-4 col-md-3 right_bar no-padding pull-left">
 						<div class="campaigns-right">
-							<button class="blue_button">Edit campaign</button>
-							<button class="black_button">Close campaign </button>
-							<div class="normal_title padding-15">Budget & Runtime</div>
-							<ul class="campaign-right-options">
-								<li>
-									<span>Total budget spent</span>
-									<span class="pull-right">100 E</span>
-								</li>
-								<li>
-									<span>Remaining budget</span>
-									<span class="pull-right">20 E</span>
-								</li>
-								<li>
-									<span>Runtime</span>
-									<span class="pull-right">01.01.2000 - 01.01.2000</span>
-								</li>
-							</ul>
-							<div class="normal_title padding-15">Performance</div>
-							<ul class="campaign-right-options">
-								<li>
-									<span>Views</span>
-									<span class="pull-right">100</span>
-								</li>
-								<li>
-									<span>Clicks</span>
-									<span class="pull-right">100</span>
-								</li>
-								<li>
-									<span>Applications</span>
-									<span class="pull-right">0</span>
-								</li>
-							</ul>
-							<div class="normal_title padding-15">
-								Status
-								<span class="green-circle pull-right"></span>
-							</div>
-						</div>						
+							<button class="blue_button">Create ad</button>
+							<button class="blue_button">What are ads? </button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -236,4 +300,4 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
 	</body>
-</html>
+</html> 
