--- a/html-design/html/data-download.html
+++ b/html-design/html/data-download.html
@@ -100,7 +100,7 @@
 									    </a>
 								    </li>				        
 							        <li>
-							        	<a href="campaigns.html" class="secondary_title active">							        		
+							        	<a href="campaigns.html" class="secondary_title">							        		
 							        		<span>Campaign</span>
 							        	</a>
 							        </li>
@@ -115,7 +115,7 @@
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="data-download.html" class="secondary_title">							        		
+							        	<a href="data-download.html" class="secondary_title active">							        		
 							        		<span>Data Download</span>
 							        	</a>
 							        </li>
@@ -128,108 +128,41 @@
 	      					</div>
 						</div>
 					</div>
-					<div class="col-sm-5 col-md-7 padding-rl-10">						
+					<div class="col-sm-9 col-md-10 padding-rl-10">						
 						<div class="campaign-middle-section">
-							<div class="normal_title padding-15">Campaign title</div>
-							<div class="campaign-block">
-								<div class="normal_title padding-15">Total budget</div>
-								<div class="indicators">
-									<div>
-										<span class="blue-block"></span>
-										Budget spent
+							<div class="data-download">
+								<div class="normal_title padding-15">Daten- Download</div>								
+								<p>This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. </p>
+
+								<p>This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. </p>
+
+								<p>This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. This text is an example. </p>
+
+
+								<form>
+									<div class="col-sm-5 padding-r-5 email-wrapper">
+									  	<div class="form-group">
+										    <label for="email">Email</label>
+										    <input type="text" class="form-control" id="email">			   
+									  	</div>
 									</div>
-									<div>
-										<span class="grey-block"></span>
-										Remaining Budget
+									<div class="col-sm-5 padding-l-5 padding-r-5">
+									  	<div class="form-group">
+										    <label for="password">Password</label>
+										    <input type="text" class="form-control" id="password">						    
+									  	</div>
+								  	</div>
+								  	<div class="col-sm-2 padding-l-5 btn-wrapper">
+									    <div class="form-group">
+											<button class="blue_button">Download</button>
+										</div>
 									</div>
-								</div>
-								<div class="progressbar-wrapper">
-									<div class="progressbar">
-								      	<div style="width: 80%;"></div>
-								    </div>
-								    <span class="counter">0,00</span>
-								</div>
-							</div>
-							<div class="campaign-block">
-								<div class="normal_title padding-15">Performance</div>
-								<div class="indicators">
-									<div>
-										<span class="blue-block"></span>
-										Views
-									</div>
-									<div>
-										<span class="grey-block"></span>
-										Clicks
-									</div>
-								</div>
-								<div class="progressbar-wrapper">
-									<div class="progressbar">
-								      	<div style="width: 50%;"></div>
-								    </div>
-								    <span class="counter">0,00</span>
-								</div>
-							</div>
-							<div class="campaign-block">
-								<div class="normal_title padding-15">Runtime</div>
-								<div class="indicators">
-									<div>
-										<span class="blue-block"></span>
-										Runtime passed
-									</div>
-									<div>
-										<span class="grey-block"></span>
-										Remaining runtime
-									</div>
-								</div>
-								<div class="progressbar-wrapper">
-									<div class="progressbar">
-								      	<div style="width: 20%;"></div>
-								    </div>
-								    <span class="counter">0,00</span>
-								</div>
+								</form>
+								<div class="clearfix"></div>
+								<p>This text is an example. This text is an example. This text is an example.</p>			
 							</div>
 						</div>					
-					</div>
-					<div class="col-sm-4 col-md-3 right_bar no-padding pull-left">
-						<div class="campaigns-right">
-							<button class="blue_button">Edit campaign</button>
-							<button class="black_button">Close campaign </button>
-							<div class="normal_title padding-15">Budget & Runtime</div>
-							<ul class="campaign-right-options">
-								<li>
-									<span>Total budget spent</span>
-									<span class="pull-right">100 E</span>
-								</li>
-								<li>
-									<span>Remaining budget</span>
-									<span class="pull-right">20 E</span>
-								</li>
-								<li>
-									<span>Runtime</span>
-									<span class="pull-right">01.01.2000 - 01.01.2000</span>
-								</li>
-							</ul>
-							<div class="normal_title padding-15">Performance</div>
-							<ul class="campaign-right-options">
-								<li>
-									<span>Views</span>
-									<span class="pull-right">100</span>
-								</li>
-								<li>
-									<span>Clicks</span>
-									<span class="pull-right">100</span>
-								</li>
-								<li>
-									<span>Applications</span>
-									<span class="pull-right">0</span>
-								</li>
-							</ul>
-							<div class="normal_title padding-15">
-								Status
-								<span class="green-circle pull-right"></span>
-							</div>
-						</div>						
-					</div>
+					</div>					
 				</div>
 			</div>
 		</section>
