--- a/html-design/html/edit-profile.html
+++ b/html-design/html/edit-profile.html
@@ -105,18 +105,23 @@
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="secondary_title">							        		
+							        	<a href="ads.html" class="secondary_title">							        		
 							        		<span>Ads</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="secondary_title">							        		
+							        	<a href="bills-receipts.html" class="secondary_title">							        		
 							        		<span>Bills and receipts</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="secondary_title">							        		
+							        	<a href="data-download.html" class="secondary_title">							        		
 							        		<span>Data Download</span>
+							        	</a>
+							        </li>
+							        <li>
+							        	<a href="#" class="secondary_title log-out">							        		
+							        		<span>Logout</span>
 							        	</a>
 							        </li>
 						      	</ul>
