--- a/html-design/html/edit-profile.html
+++ b/html-design/html/edit-profile.html
@@ -10,72 +10,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">    	
         <title>Edit Profile</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
-        <link rel="stylesheet" href="css/main.css">    
+        <link rel="stylesheet" href="http://localhost:8080/global/picstagraph-web/css/index.css">    
     </head>
     
     <body> 
-    	<header>
-    		<nav class="navbar navbar-default">
-  				<div class="container"> 
-	  				<div class="row">   
-	    				<div class="navbar-header">
-	      					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        					<img src="images/menu.svg" alt="burgermenu">
-	      					</button>
-	      					<a class="navbar-brand" href="#">
-	      						<img src="images/logo-big.png">
-	      					</a>
-	    				</div>
-	    				<!-- Collect the nav links, forms, and other content for toggling -->
-	    				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">				      	
-					      	<form class="navbar-form navbar-left">				      		
-	            				<div class="input-group search-input-group">
-							        <input type="text" class="form-control"  placeholder="Search" >
-				                    <span class="input-group-addon">
-				                        <button type="submit">
-				                            <span class="search_icon">
-				                            	<img src="images/search.svg" alt="search_icon" />
-				                            </span>
-				                        </button>  
-				                    </span>
-				                </div>			            	
-					      	</form>
-					      	<ul class="nav navbar-nav pull-right">
-						        <li>
-						        	<a href="#" class="menu_home">						        		
-						        		<span>Home</span>
-						        	</a>
-						        </li>
-						        <li>
-						        	<a href="#" class="menu_public">						        		
-							        	<span>Campaign</span>
-							        </a>
-							    </li>	
-						        <li>
-						        	<a href="#" class="menu_messages">						        		
-								        <span>Messages</span>
-								    </a>
-							    </li>				        
-						        <li>
-						        	<a href="#" class="menu_notifications">						        		
-						        		<span>Notifications</span>
-						        	</a>
-						        </li>
-						        <li>
-						        	<a href="#" class="menu_profile">						        		
-						        		<span>Profile</span>
-						        	</a>
-						        </li>
-					      	</ul>
-	    				</div><!-- /.navbar-collapse -->
-	    			</div>
-  				</div><!-- /.container-fluid -->
-			</nav> 
-		</header>
+    	<header><nav class="navbar navbar-default"><div class="container"><div class="row"><div class="navbar-header"><button type="button" class="navbar-toggle collapsed"><img src="images/menu.svg" alt="Menu"></button><a class="navbar-brand" href="/"><img src="images/logo-pic.png" alt="logo"></a></div><div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"><form class="navbar-form navbar-left"><div class="input-group search-input-group"><input type="text" class="form-control" placeholder="Search"><span class="input-group-addon"><button type="submit"><span class="search_icon"><img src="images/search.svg" alt="Search"></span></button></span></div></form><ul class="nav navbar-nav pull-right"><li role="presentation" class="menu_home active"><a role="button" href="#"><span>Home</span></a></li><li role="presentation" class="menu_public"><a role="button" href="#"><span>Campaign</span></a></li><li role="presentation" class="menu_messages"><a role="button" href="#"><span>Messages</span></a></li><li role="presentation" class="menu_notifications"><a role="button" href="#"><span>Notifications</span></a></li><li role="presentation" class="menu_profile"><a role="button" href="#"><span>Profile</span></a></li></ul></div></div></div></nav></header>
 		<section>
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-3 col-md-2 left_menu no-padding">
+					<div class="left_menu no-padding">
 						<div class="">
 							<button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#left_menu" aria-expanded="false">
 								<div class="normal_title padding-15 visible-xs">Menu</div>
@@ -128,7 +71,7 @@
 	      					</div>
 						</div>
 					</div>
-					<div class="col-sm-9 col-md-10 padding-rl-10">
+					<div class="padding-rl-10 middle-section width-80">
 						<div class="edit-profile-form">
 							<form action="">
 								<div class="form-title">Edit profile</div>
