--- a/html-design/html/subscriberpopup.html
+++ b/html-design/html/subscriberpopup.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">    	
         <title>Picstagraph</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
-        <link rel="stylesheet" href="css/main.css">    
+        <link rel="stylesheet" href="http://localhost:8080/global/picstagraph-web/css/index.css">    
     </head>
     
     <body> 
