create campaign designs

--- a/html-design/html/create-campaign2.html
+++ b/html-design/html/create-campaign2.html
@@ -25,9 +25,15 @@
 	      	<div class="modal-body">
 	        	<div class="col-sm-7 create-campaign-wrapper">
                     <div class="title">Title</div>
-                    <input type="text" placeholder="Enter your campaign description here and add images and videos… "/> 
-	        	</div> 
-	        	<div class="col-sm-5 no-padding">
+                    <p>This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.</p>
+                    <img src="images/create-campaign-img.jpg" class="margin-b-25"/>
+                    <!--Zoom in zoom out design not done as it could be jquery plugin -->
+                    <p>This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.</p>
+                    <img src="images/create-campaign-img.jpg" class="margin-b-25"/>
+                    <!-- Video not added as dependancy on video player-->
+                    <p>This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.This text is an example.</p>
+                </div> 
+	        	<div class="col-sm-5 no-padding disp-flex">
                     <div class="editor-options">
                         <ul class="editor-row">
                             <li>
