--- a/html-design/html/user.html
+++ b/html-design/html/user.html
@@ -42,12 +42,12 @@
 									    </a>
 								    </li>				        
 							        <li>
-							        	<a href="#" class="menu_user secondary_title">							        		
+							        	<a href="#" class="menu_user secondary_title active">							        		
 							        		<span>User</span>
 							        	</a>
 							        </li>
 							        <li>
-							        	<a href="#" class="menu_pics secondary_title active">							        		
+							        	<a href="#" class="menu_pics secondary_title">							        		
 							        		<span>Pics</span>
 							        	</a>
 							        </li>
@@ -56,62 +56,70 @@
 						</div>
 					</div>
 					<div class="padding-rl-10 middle-section">
-						<div class="col-sm-6 pic-left-block">
-                            <div class="pic-block">
-                                <img src="images/pic-1.jpg" />
-                                <div class="name-wrapper">
-                                    <div class="username">User name</div>
-                                    <div class="name">Name</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 pic-right-block">
-                            <div class="pic-block">
-                                <img src="images/pic-2.jpg" />
-                                <div class="name-wrapper">
-                                    <div class="username">User name</div>
-                                    <div class="name">Name</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-sm-6 pic-left-block">
-                            <div class="pic-block">
-                                <img src="images/pic-3.jpg" />
-                                <div class="name-wrapper">
-                                    <div class="username">User name</div>
-                                    <div class="name">Name</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 pic-right-block">
-                            <div class="pic-block">
-                                <img src="images/pic-4.jpg" />
-                                <div class="name-wrapper">
-                                    <div class="username">User name</div>
-                                    <div class="name">Name</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-sm-6 pic-left-block">
-                            <div class="pic-block">
-                                <img src="images/pic-1.jpg" />
-                                <div class="name-wrapper">
-                                    <div class="username">User name</div>
-                                    <div class="name">Name</div>
-                                </div>
-                            </div> 
-                        </div>
-                        <div class="col-sm-6 pic-right-block">
-                            <div class="pic-block">
-                                <img src="images/pic-5.jpg" />
-                                <div class="name-wrapper">
-                                    <div class="username">User name</div>
-                                    <div class="name">Name</div>
-                                </div>
-                            </div>
-                        </div>
+						<div class="user-wrapper">
+							<div class="col-sm-6 pic-left-block">
+								<div class="pic-block">
+									<img src="images/pic-1.jpg" />
+									<div class="name-wrapper">
+										<div class="username">User name</div>
+										<div class="name">Name</div>
+										<button class="filled_button">Subscribe</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-6 pic-right-block">
+								<div class="pic-block">
+									<img src="images/pic-2.jpg" />
+									<div class="name-wrapper">
+										<div class="username">User name</div>
+										<div class="name">Name</div>
+										<button class="filled_button">Subscribe</button>
+									</div>
+								</div>
+							</div>
+							<div class="clearfix"></div>
+							<div class="col-sm-6 pic-left-block">
+								<div class="pic-block">
+									<img src="images/pic-3.jpg" />
+									<div class="name-wrapper">
+										<div class="username">User name</div>
+										<div class="name">Name</div>
+										<button class="filled_button">Subscribe</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-6 pic-right-block">
+								<div class="pic-block">
+									<img src="images/pic-4.jpg" />
+									<div class="name-wrapper">
+										<div class="username">User name</div>
+										<div class="name">Name</div>
+										<button class="filled_button">Subscribe</button>
+									</div>
+								</div>
+							</div>
+							<div class="clearfix"></div>
+							<div class="col-sm-6 pic-left-block">
+								<div class="pic-block">
+									<img src="images/pic-1.jpg" />
+									<div class="name-wrapper">
+										<div class="username">User name</div>
+										<div class="name">Name</div>
+										<button class="filled_button">Subscribe</button>
+									</div>
+								</div> 
+							</div>
+							<div class="col-sm-6 pic-right-block">
+								<div class="pic-block">
+									<img src="images/pic-5.jpg" />
+									<div class="name-wrapper">
+										<div class="username">User name</div>
+										<div class="name">Name</div>
+										<button class="filled_button">Subscribe</button>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="right_bar no-padding pull-left">
 						<div class="normal_title padding-15">Favourite Campaigns</div>
