--- a/html-design/html/mobile1.html
+++ b/html-design/html/mobile1.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Mobile Screen 1</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">    
+    <link rel="stylesheet" href="http://localhost:8080/global/picstagraph-web/css/index.css">    
 </head>
 <body>
 	<header>
