--- a/html-design/html/mobile4.html
+++ b/html-design/html/mobile4.html
@@ -3,10 +3,10 @@
 <head>
 	<title>Mobile Screen 4</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">    
+    <link rel="stylesheet" href="http://localhost:8080/global/picstagraph-web/css/index.css">    
 </head>
 <body>
-	<div class="modal" tabindex="-1" role="dialog" id="myModal">
+	<div class="modal mobile-modal" tabindex="-1" role="dialog" id="myModal">
   		<div class="modal-dialog" role="document">
 		    <div class="modal-content">
 		      <div class="modal-body">
