--- a/html-design/html/subscriberpopup.html
+++ b/html-design/html/subscriberpopup.html
@@ -268,7 +268,7 @@
 				</div>
 			</div>
 		<!-- Modal -->
-		<div id="myModal" class="modal fade right_bar" role="dialog">
+		<div id="myModal" class="modal fade right_bar subscribe-popup" role="dialog">
 		  	<div class="modal-dialog">
 		  		<div class="normal_title padding-15 modal-normal-title">Subscribers / Subscribe/ Likes</div>
 				<div class="community">
