--- a/html-design/html/home.html
+++ b/html-design/html/home.html
@@ -112,7 +112,7 @@
 	      					</div>
 						</div>
 					</div>
-					<div class="col-sm-5 col-md-7">
+					<div class="col-sm-3 col-md-5">
 						<div class="feed_wrapper">
 							<div class="feed_header">
 								<div class="col-sm-1 col-xs-1 no-padding profile_image">
@@ -190,7 +190,7 @@
 							</div>						
 						</div>
 					</div>
-					<div class="col-sm-4 col-md-3 right_bar no-padding pull-left">
+					<div class="col-sm-4 col-md-3 right_bar no-padding">
 						<div class="normal_title padding-15">Favourite Campaigns</div>
 						<div class="campaigns">
 							<div class="campaign_wrapper">
