added index1.html file

--- a/html-design/html/payment-overview1.html
+++ b/html-design/html/payment-overview1.html
@@ -75,7 +75,7 @@
                             <button class="filled_button">Commit to buy</button>
                         </div>
                   </div>
-                  <div class="col-sm-7 no-padding disp-flex create-campaign-feed-wrapper">
+                  <div class="col-sm-7 disp-flex create-campaign-feed-wrapper">
                      <div class="feed_wrapper">
                         <div class="feed_header">
                            <div class="no-padding profile_image"><img src="images/image.jpg" alt="feed" class="img-circle img-responsive"></div>
