--- a/html-design/html/create-ad1.html
+++ b/html-design/html/create-ad1.html
@@ -72,7 +72,7 @@
                                     <li>Total budget can not be exceeded</li>
                                 </ul>
                   </div>
-                  <div class="col-sm-7 no-padding disp-flex create-campaign-feed-wrapper">
+                  <div class="col-sm-7 disp-flex create-campaign-feed-wrapper">
                      <div class="feed_wrapper">
                         <div class="feed_header">
                            <div class="no-padding profile_image"><img src="images/image.jpg" alt="feed" class="img-circle img-responsive"></div>
